# pezzo

./: .gitignore  Cargo.toml  Cross.toml  Makefile  build.rs  pam.Dockerfile  pezzo
cross/: aarch64.pam.Dockerfile  script.sh  x86_64.pam.Dockerfile
crypt/: Cargo.toml
crypt/src/: lib.rs  md5.rs  sha.rs  sha256.rs  sha512.rs  util.rs  verify.rs
crypt/src/blowfish/: data.rs  mod.rs
pam/: Cargo.toml  build.rs
pam/src/: lib.rs
secure-read/: Cargo.toml
secure-read/src/: c.rs  lib.rs
secure-read/src/unix/: io.rs  mod.rs
secure-read/src/unix/c/: mod.rs  noecho.rs  nonblock.rs  poll.rs
secure-read/src/unix/linux/: mod.rs  noecho.rs  nonblock.rs  poll.rs
src/: database.rs  ffi.rs  lib.rs  main.rs  util.rs
src/conf/: mod.rs  parser.rs
src/io/: canonicalize.rs  dir.rs  file.rs  mod.rs
src/pezzo/: cli.rs  context.rs  main.rs  util.rs
src/unix/: env.rs  iam.rs  io.rs  linux.rs  mod.rs  pam.rs  permissions.rs  process.rs  time.rs  tty.rs
src/unix/bsd/: freebsd.rs  macos.rs  mod.rs  netbsd.rs
src/unix/bsd/macos/: mod.rs
src/unix/common/: hostname.rs  mod.rs  noecho.rs  nonblock.rs  uname.rs
src/unix/fs/: canonicalize.rs  mod.rs  normalize.rs
src/unix/iam/: build.rs  builder.rs  cache.rs  groups.rs  mod.rs  passwd.rs
src/unix/io/: canonicalize.rs  dir.rs  file.rs  mod.rs
src/unix/linux/: mod.rs  noecho.rs  time.rs  uname.rs
src/unix/linux/proc/: context.rs  mod.rs  stat.rs
src/unix/linux/tty/: mod.rs
src/unix/macos/: mod.rs
src/unix/macos/sysctl/: mod.rs
src/unix/pam/: mod.rs  sys.rs
src/unix/process/: context.rs  mod.rs
src/unix/tty/: mod.rs
src/unix/which/: checker.rs  mod.rs
sstd/: Cargo.toml
sstd/src/: lib.rs  macros.rs
sstd/src/collections/: mod.rs
sstd/src/collections/hash/: map.rs
sstd/src/unix/: env.rs  error.rs  mod.rs  process.rs  rand.rs
sstd/src/unix/env/: builder.rs  mod.rs  var_name.rs
sstd/src/unix/fs/: canonicalize.rs  dir.rs  file.rs
sstd/src/unix/io/: error.rs  mod.rs  stdio.rs
sstd/src/unix/process/: c_exit.rs  linux_bare_exit.rs  mod.rs
