[workspace]
members = [".", "crypt", "pam", "secure-read"]

[package]
name = "pezzo"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "pezzo"
path = "src/pezzo/main.rs"

[profile.release]
strip = true
opt-level = 3
# lto = true
codegen-units = 1

[features]

[build-dependencies]
memchr = "2.5.0"

[target.'cfg(unix)'.dependencies]
memchr = "2.5.0"
libc = "0.2.140"
tty-info = { git = "https://www.github.com/shurizzle/tty-info.git", default-features = false }
unix-clock = { git = "https://www.github.com/shurizzle/unix-clock.git", default-features = false }
cfg-if = "1.0.0"
no_std_io = { version = "0.6.0", default-features = false, features = [
  "alloc",
] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-syscalls = { version = "0.2.0", default-features = false, features = [
  "bare",
] }
linux-stat = { version = "0.3.1", default-features = false }
linux-raw-sys = "0.4.3"

[target.'cfg(all(unix, not(target_os = "openbsd")))'.dependencies]
pam = { path = "pam" }
secure-read = { path = "secure-read", default-features = false, features = [
  "pam-compat",
] }

[target.'cfg(target_os = "openbsd")'.dependencies]
secure-read = { path = "secure-read", default-features = false }

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
globset = { version = "0.4.10", features = ["simd-accel"] }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.1.0", default-features = false, features = [
  "alloc",
] }
anyhow = { version = "1.0.70", default-features = false }

[patch.crates-io]
no_std_io = { git = "https://github.com/shurizzle/no-std-io.git" }
