[workspace]
members = [".", "crypt", "pam", "secure-read"]

[package]
name = "pezzo"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "pezzo"
path = "src/pezzo/main.rs"

[profile.release]
strip = true
opt-level = 3
# lto = true
codegen-units = 1

[features]

[build-dependencies]
memchr = "2.5.0"

[target.'cfg(unix)'.dependencies]
memchr = "2.5.0"
libc = "0.2.147"
tty-info = { git = "https://www.github.com/shurizzle/tty-info.git" }
unix-clock = { git = "https://www.github.com/shurizzle/unix-clock.git" }
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-syscalls = "0.3.1"
linux-stat = "0.3.3"
linux-raw-sys = "0.4.3"

[target.'cfg(all(unix, not(target_os = "openbsd")))'.dependencies]
pam = { path = "pam" }
secure-read = { path = "secure-read", features = ["pam-compat"] }

[target.'cfg(target_os = "openbsd")'.dependencies]
secure-read = { path = "secure-read" }

[dependencies]
peg = "0.8.1"
clap = { version = "4.3.19", features = ["derive"] }
globset = { version = "0.4.11", features = ["simd-accel"] }
anyhow = "1.0.72"
