[workspace]
members = [".", "sstd", "crypt", "pam", "secure-read"]

[package]
name = "pezzo"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "pezzo"
path = "src/pezzo/main.rs"

[profile.release]
strip = true
opt-level = 3
# lto = true
codegen-units = 1

[features]

[build-dependencies]
memchr = "2.5.0"

[target.'cfg(unix)'.dependencies]
memchr = "2.5.0"
libc = "0.2.147"
tty-info = { git = "https://www.github.com/shurizzle/tty-info.git", default-features = false }
unix-clock = { git = "https://www.github.com/shurizzle/unix-clock.git", default-features = false }
cfg-if = "1.0.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
linux-syscalls = { version = "0.3.1", default-features = false, features = [
  "bare",
] }
linux-stat = { version = "0.3.3", default-features = false }
linux-raw-sys = "0.4.3"
linux-errnos = { version = "0.3.4", default-features = false, features = [
  "libc-compat",
] }

[target.'cfg(all(unix, not(target_os = "openbsd")))'.dependencies]
pam = { path = "pam" }
secure-read = { path = "secure-read", default-features = false, features = [
  "pam-compat",
] }

[target.'cfg(target_os = "openbsd")'.dependencies]
secure-read = { path = "secure-read", default-features = false }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "watchos", target_os = "tvos", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
bsd-errnos = "0.0.1"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
globset = { version = "0.4.11", features = ["simd-accel"] }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.1.0", default-features = false, features = [
  "alloc",
] }
anyhow = { version = "1.0.72", default-features = false }
sstd = { path = "sstd", features = ["c"] }
