[package]
name = "crypt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
generate = ["dep:rand"]

[dependencies]
atoi = "2.0.0"
memchr = "2.5.0"
md5 = "0.7.0"
sha2 = "0.10.6"
base64 = "0.21.0"

rand = { version = "0.8.5", features = ["getrandom"], optional = true }
