[package]
name = "secure-read"
version = "0.0.1"
edition = "2021"

[features]
default = []
c = ["libc", "memchr", "linux-syscalls/libc-compat", "sstd/c"]
pam-compat = ["pam", "c"]

[dependencies]
sstd = { path = "../sstd" }

[target.'cfg(unix)'.dependencies]
pam = { path = "../pam", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = "0.2.147"
memchr = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys = "0.4.3"
linux-errnos = { version = "0.3.4", default-features = false, features = [
  "no_std_io-compat",
] }
linux-syscalls = { version = "0.3.1", default-features = false }
libc = { version = "0.2.147", optional = true }
memchr = { version = "2.5.0", optional = true }
cfg-if = "1.0.0"
