[package]
name = "sstd"
version = "0.1.0"
edition = "2021"

[features]
default = ["c"]
c = ["linux-syscalls/libc-compat", "unix-clock/libc-compat", "libc"]

[target.'cfg(unix)'.dependencies]
memchr = "2.5.0"
unix-clock = { git = "https://www.github.com/shurizzle/unix-clock.git", default-features = false }
cfg-if = "1.0.0"
hashbrown = { version = "0.14.0", default-features = false, features = [
  "raw",
  "rustc-internal-api",
] }
getrandom = { version = "0.2.10", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
linux-syscalls = { version = "0.3.1", default-features = false, features = [
  "bare",
] }
linux-raw-sys = "0.4.3"
linux-errnos = { version = "0.3.4", default-features = false, features = [
  "libc-compat",
] }
linux-stat = { version = "0.3.3", default-features = false }
libc = { version = "0.2.147", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "watchos", target_os = "tvos", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
bsd-errnos = "0.0.1"
libc = "0.2.147"
